# DevFlow

./: .envrc  .gitignore  GEMINI.md  README.md  [dap-terminal] Next.js: debug full stack  generate_ts_api.py  package-lock.json  package.json
backend/: .gitignore  devflow.db  generate_ts_models.py  pyproject.toml
backend/app/: main.py
backend/app/core/: settings.py
backend/app/core/lib/: base_model_service.py  database.py
backend/app/features/: __init__.py
backend/app/features/account/: routes.py
backend/app/features/account/models/: account.py
backend/app/features/answer/: routes.py
backend/app/features/interaction/: routes.py
backend/app/features/question/: routes.py
backend/app/features/tag/: routes.py
backend/app/features/user/: routes.py
backend/app/features/user_collection/: routes.py
backend/app/features/vote/: routes.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0383742d4e28_add_vote_model.py  301c7edffc42_user_collection_model_add_timestamps.py  34c308381e2a_add_num_questions_to_tag.py  392867123f6c_user_collection_model.py  4157c1b3f243_update_account_model_to_make_the_.py  606f16f4fd54_question_answer_and_tag.py  664f78fa831a_user_collection_model_add_timestamps.py  6feecbfbb769_account_model_update.py  6ff8a7be92e3_add_relationship_to_tag_and_question.py  752f75186a8a_update_user.py  7c0708eb27e6_add_relationship_between_user_questions_.py  b0d97e8c72f1_iteraction_model.py  d0a924170435_initial_migration.py  d98e112cafd6_question_answer_and_tag.py  ef7fbb9d2409_account_model.py
frontend/: auth.ts  (+4 more)
(+119 files in other folders)
