[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri Seki",email = "yuriseki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastfeatures (>=0.1.5,<0.2.0)",
    "slugify (>=0.0.1,<0.0.2)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
